# slawatch

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
.github/workflows/: sla-check.yml
examples/: config.example.yaml
reports/: sla-20260501T061246Z.json  sla-20260501T061246Z.md
slawatch/: __init__.py  __main__.py  cli.py  config.py  evaluator.py  exceptions.py  sla_catalog.py
slawatch/metrics/: __init__.py  base.py  cloud_run.py
slawatch/reporters/: __init__.py  json_report.py  markdown.py
tests/: conftest.py  test_config.py  test_evaluator.py
